<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.toptal.calories.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_admin"
        android:icon="@drawable/ic_baseline_admin_panel_settings_24"
        android:title="@string/admin_panel"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filters"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/action_filters"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>